# cv_main

./: .gitignore  .gitmodules  .project_dir.nosync.txt  Gemfile  README.md  basic_setup  commands  default.nix  info.yaml  log.txt  main.py  pyproject.toml  requirements.txt  shell  shell.nix  test.py  time.txt  time_test_main.py  tracker.py  videostream_test.py  yolo_video.py  yolo_video_timetest.py
.venv.old/: pyvenv.cfg
commands/: .check_git_hooks  .check_pip_modules  .install_onnx  .install_opencv  .install_realsense  .install_zed  .install_zed.sh  clean  commands  help  nuke  pip  shell  test_kalman.ps1  test_main  war_crimes
commands/modeling/: build  generate_onnx  generate_tensor_rt
commands/project/: analyze  commands  test_main
commands/setup/: boot_script  cli_tools  manual_pytorch  manual_torch2trt  onyx  opencv  pycuda  realsense  ssh_keys  swapfile  xavier  zed  zerotier
commands/tools/: copy_sd_card
commands/xavier/: example_manual_start.sh  home.boot.sh  restart_wifi.sh  setup
documentation/: SETUP.md  communication_specs.cpp  setup.md
main/: fake_models.py  info.yaml  main.py
main/_tests/: test_main.py  test_on_board_cam.py  test_opencv_image.py
main/models/: common.py
modules/: __init__.py  videostream.py
nix/: sources.json
project_bin/: bundle  exec  ffmpeg  gem  pip  python  ruby  youtube-dl
scripts/: (setup).rb  build.rb  convert_name.rb  edit.rb  exec_with_python_path.rb  gpio.py  project_path.rb  record_color_video.py  record_video.py  record_video_gstreamer.py  remove.rb  run.rb  setup.rb  test_opencv_image.py
settings/: info.json
settings/commands/: _  (+18 more)
source/: README.md  main.py  main_depth_recording.py  time_test_main.py  tracker.py  videostream_test.py  yolo_video.py  yolo_video_timetest.py
toolbox/: file_system_tools.py  geometry_tools.py  globals.py  image_tools.py  tools.py  tools.rb  video_tools.py
v3t1k/: v3t.names
(+264 files in other folders)
