[tool.poetry]
name = "fornix"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pip = "20.1.1"
PyYAML = "5.1.2"
regex = "2020.7.14"
filterpy = "1.4.4"
pyserial = "3.4"
opencv-contrib-python = "4.5.1.48"
dict-recursive-update = "1.0.1"
super-map = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
